--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
-# Build results
+# Build results\
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -328,3 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+
